; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkcasfw.c_image_stat_file.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkcasfw.c_image_stat_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.image_desc = type { i64, i64, i32* }
%struct.stat = type { i64 }

@.str = private unnamed_addr constant [18 x i8] c"stat failed on %s\00", align 1
@ERR_FATAL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [51 x i8] c"file %s is too big, will be truncated to %d bytes\0A\00", align 1
@ERR_INVALID_IMAGE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @image_stat_file(%struct.image_desc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.image_desc*, align 8
  %4 = alloca %struct.stat, align 8
  %5 = alloca i32, align 4
  store %struct.image_desc* %0, %struct.image_desc** %3, align 8
  %6 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %7 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %6, i32 0, i32 2
  %8 = load i32*, i32** %7, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %56

11:                                               ; preds = %1
  %12 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %13 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %12, i32 0, i32 2
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @stat(i32* %14, %struct.stat* %4)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %11
  %19 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %20 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %19, i32 0, i32 2
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @ERRS(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32* %21)
  %23 = load i32, i32* @ERR_FATAL, align 4
  store i32 %23, i32* %2, align 4
  br label %56

24:                                               ; preds = %11
  %25 = getelementptr inbounds %struct.stat, %struct.stat* %4, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %28 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp sgt i64 %26, %29
  br i1 %30, label %31, label %45

31:                                               ; preds = %24
  %32 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %33 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %32, i32 0, i32 2
  %34 = load i32*, i32** %33, align 8
  %35 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %36 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = call i32 @WARN(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0), i32* %34, i64 %37)
  %39 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %40 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %43 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %42, i32 0, i32 1
  store i64 %41, i64* %43, align 8
  %44 = load i32, i32* @ERR_INVALID_IMAGE, align 4
  store i32 %44, i32* %2, align 4
  br label %56

45:                                               ; preds = %24
  %46 = getelementptr inbounds %struct.stat, %struct.stat* %4, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %49 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %48, i32 0, i32 1
  store i64 %47, i64* %49, align 8
  %50 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %51 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %50, i32 0, i32 1
  %52 = load i64, i64* %51, align 8
  %53 = call i64 @align(i64 %52, i32 1)
  %54 = load %struct.image_desc*, %struct.image_desc** %3, align 8
  %55 = getelementptr inbounds %struct.image_desc, %struct.image_desc* %54, i32 0, i32 0
  store i64 %53, i64* %55, align 8
  store i32 0, i32* %2, align 4
  br label %56

56:                                               ; preds = %45, %31, %18, %10
  %57 = load i32, i32* %2, align 4
  ret i32 %57
}

declare dso_local i32 @stat(i32*, %struct.stat*) #1

declare dso_local i32 @ERRS(i8*, i32*) #1

declare dso_local i32 @WARN(i8*, i32*, i64) #1

declare dso_local i64 @align(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
